kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend  

  template:
    metadata: 

      labels:
        app: backend    

    spec: 
      containers:
        - name: backend
          image: threetierapp.azurecr.io:$(Build.BuildId)
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
