kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  labels:
    app: frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend


    spec:
      containers:
        - name: frontend
          image: threetierapp.azurecr.io/frontend:v5

          ports:
            - containerPort: 80
