kubernetes/backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: backend

  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001

  type: ClusterIP
